# sysrepo-rs

./: Cargo.toml  example_utils.rs
examples/: application_changes.rs  notif_send.rs  notif_subscribe.rs  oper_data.rs  oper_data_pull.rs  rpc_send.rs  rpc_subscribe.rs  sr_get_data.rs  sr_get_items.rs  sr_set_item.rs
src/: lib.rs
sysrepo-sys/: Cargo.toml  build.rs
