[package]
authors = [
  "Toshiaki Takada <toshi@reze.rs>",
  "Valentin Kivachuk Burda <foss@vk496.es>",
]
categories = ["external-ffi-bindings", "network-programming"]
description = "Safe wrappers of sysrepo Rust bindings"
edition = "2021"
keywords = ["sysrepo", "libyang", "yang", "netconf"]
license = "Apache-2.0"
name = "sysrepo"
readme = "README.md"
repository = "https://github.com/sjtakada/sysrepo-rs"
version = "0.5.0"

[features]
default = ["yang3"]
yang2 = ["dep:yang2", "sysrepo-sys/yang2"]
yang3 = ["dep:yang3", "sysrepo-sys/yang3"]

[dependencies]
sysrepo-sys = { version = "0.1.0", path = "./sysrepo-sys" }
libc = "0.2.121"
yang2 = { version = "0.18", optional = true }
yang3 = { version = "0.13", optional = true }
bitflags = "2.6.0"

[dev-dependencies]
nix = "0.17.0"

[workspace]
members = ["sysrepo-sys"]
